scrollspy and ids

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
     </head>
     <body>
         <header class="m-1 row p-1">
-            <span class="col text-start" id="title" title="Beatrice the (Carpenter) Bee">
+            <span class="col text-start" title="Beatrice the (Carpenter) Bee">
                 <img class="logo" src="static/images/icon.png" alt="Bee Logo" aria-hidden="true">
-                <a class="h2" href="https://www.seas.upenn.edu/~ericoc/bee/">Beatrice the Bee</a>
+                <a class="h2" href="https://www.seas.upenn.edu/~ericoc/bee/#title" id="title">Beatrice the Bee</a>
             </span>
             <span class="col h4 text-end">
                 <a id="microscope" href="https://www.nano.upenn.edu/equipment/quanta-600-feg-esem/" target="_blank">Quanta 600 FEG ESEM</a>
             </span>
         </header>
         <main>
-            <nav class="m-3 p-1 simple-list-example-scrollspy" id="bee-parts">
+            <nav class="m-3 p-1 simple-list-example-scrollspy" id="nav">
                 <ul class="nav nav-tabs border-dark border-3" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link" href="#head">Head</a>
@@ -88,7 +88,7 @@
             </nav>
             <div id="pictures" data-bs-spy="scroll" data-bs-target="#simple-list-example" data-bs-offset="0" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
                 <p class="text-center">
-                    <a href="static/images/portrait/portrait.png" target="_blank"><img alt="Portrait" class="rounded border border-3 border-dark" src="static/images/portrait/portrait_annotated.png" id="portrait"></a>
+                    <a href="static/images/portrait/portrait.png" id="portrait" target="_blank"><img alt="Portrait" class="rounded border border-3 border-dark" src="static/images/portrait/portrait_annotated.png"></a>
                 </p>
                 <p class="lead text-center fst-italic p-1">
                     Beatrice was a female carpenter bee, that was caught in North Philadelphia in May 2025.
@@ -103,11 +103,11 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/head/head_001.png" target="_blank"><img alt="Head 001" class="img-bee rounded m-1" src="static/images/head/head_001.png" id="head1"></a>
-                        <a href="static/images/head/head_003.png" target="_blank"><img alt="Head 003" class="img-bee rounded m-1" src="static/images/head/head_003.png" id="head3"></a>
-                        <a href="static/images/head/head_004.png" target="_blank"><img alt="Head 004" class="img-bee rounded m-1" src="static/images/head/head_004.png" id="head4"></a>
-                        <a href="static/images/head/head_005.png" target="_blank"><img alt="Head 005" class="img-bee rounded m-1" src="static/images/head/head_005.png" id="head5"></a>
-                        <a href="static/images/head/head_002_4K.png" target="_blank"><img alt="Head 002 (4K)" class="img-bee rounded m-1" src="static/images/head/head_002_4K.png" id="head2"></a>
+                        <a href="static/images/head/head_001.png" id="head1" target="_blank"><img alt="Head 001" class="img-bee rounded m-1" src="static/images/head/head_001.png"></a>
+                        <a href="static/images/head/head_003.png" id="head3" target="_blank"><img alt="Head 003" class="img-bee rounded m-1" src="static/images/head/head_003.png"></a>
+                        <a href="static/images/head/head_004.png" id="head4" target="_blank"><img alt="Head 004" class="img-bee rounded m-1" src="static/images/head/head_004.png"></a>
+                        <a href="static/images/head/head_005.png" id="head5" target="_blank"><img alt="Head 005" class="img-bee rounded m-1" src="static/images/head/head_005.png"></a>
+                        <a href="static/images/head/head_002_4K.png" id="head2" target="_blank"><img alt="Head 002 (4K)" class="img-bee rounded m-1" src="static/images/head/head_002_4K.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -120,10 +120,10 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/forehead/forehead_001.png" target="_blank"><img alt="Forehead 001" class="img-bee rounded m-1" src="static/images/forehead/forehead_001.png" id="forehead1"></a>
-                        <a href="static/images/forehead/forehead_002.png" target="_blank"><img alt="Forehead 002" class="img-bee rounded m-1" src="static/images/forehead/forehead_002.png" id="forehead2"></a>
-                        <a href="static/images/forehead/forehead_003.png" target="_blank"><img alt="Forehead 003" class="img-bee rounded m-1" src="static/images/forehead/forehead_003.png" id="forehead3"></a>
-                        <a href="static/images/forehead/forehead_004.png" target="_blank"><img alt="Forehead 004" class="img-bee rounded m-1" src="static/images/forehead/forehead_004.png" id="forehead4"></a>
+                        <a href="static/images/forehead/forehead_001.png" id="forehead1" target="_blank"><img alt="Forehead 001" class="img-bee rounded m-1" src="static/images/forehead/forehead_001.png"></a>
+                        <a href="static/images/forehead/forehead_002.png" id="forehead2" target="_blank"><img alt="Forehead 002" class="img-bee rounded m-1" src="static/images/forehead/forehead_002.png"></a>
+                        <a href="static/images/forehead/forehead_003.png" id="forehead3" target="_blank"><img alt="Forehead 003" class="img-bee rounded m-1" src="static/images/forehead/forehead_003.png"></a>
+                        <a href="static/images/forehead/forehead_004.png" id="forehead4" target="_blank"><img alt="Forehead 004" class="img-bee rounded m-1" src="static/images/forehead/forehead_004.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -136,9 +136,9 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/antenna/antenna_001.png" target="_blank"><img alt="Antenna 001" class="img-bee rounded m-1" src="static/images/antenna/antenna_001.png" id="antenna1"></a>
-                        <a href="static/images/antenna/antenna_002.png" target="_blank"><img alt="Antenna 002" class="img-bee rounded m-1" src="static/images/antenna/antenna_002.png" id="antenna2"></a>
-                        <a href="static/images/antenna/antenna_003.png" target="_blank"><img alt="Antenna 003" class="img-bee rounded m-1" src="static/images/antenna/antenna_003.png" id="antenna3"></a>
+                        <a href="static/images/antenna/antenna_001.png" id="antenna1" target="_blank"><img alt="Antenna 001" class="img-bee rounded m-1" src="static/images/antenna/antenna_001.png"></a>
+                        <a href="static/images/antenna/antenna_002.png" id="antenna2" target="_blank"><img alt="Antenna 002" class="img-bee rounded m-1" src="static/images/antenna/antenna_002.png"></a>
+                        <a href="static/images/antenna/antenna_003.png" id="antenna3" target="_blank"><img alt="Antenna 003" class="img-bee rounded m-1" src="static/images/antenna/antenna_003.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -151,10 +151,10 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/eye/eye_001.png" target="_blank"><img alt="Eye 001" class="img-bee rounded m-1" src="static/images/eye/eye_001.png" id="eye1"></a>
-                        <a href="static/images/eye/eye_002.png" target="_blank"><img alt="Eye 002" class="img-bee rounded m-1" src="static/images/eye/eye_002.png" id="eye2"></a>
-                        <a href="static/images/eye/eye_003.png" target="_blank"><img alt="Eye 003" class="img-bee rounded m-1" src="static/images/eye/eye_003.png" id="eye3"></a>
-                        <a href="static/images/eye/eye_004.png" target="_blank"><img alt="Eye 004" class="img-bee rounded m-1" src="static/images/eye/eye_004.png" id="eye4"></a>
+                        <a href="static/images/eye/eye_001.png" id="eye1" target="_blank"><img alt="Eye 001" class="img-bee rounded m-1" src="static/images/eye/eye_001.png"></a>
+                        <a href="static/images/eye/eye_002.png" id="eye2" target="_blank"><img alt="Eye 002" class="img-bee rounded m-1" src="static/images/eye/eye_002.png"></a>
+                        <a href="static/images/eye/eye_003.png" id="eye3" target="_blank"><img alt="Eye 003" class="img-bee rounded m-1" src="static/images/eye/eye_003.png"></a>
+                        <a href="static/images/eye/eye_004.png" id="eye4" target="_blank"><img alt="Eye 004" class="img-bee rounded m-1" src="static/images/eye/eye_004.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -167,10 +167,10 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/wing/wing_001.png" target="_blank"><img alt="Wing 001" class="img-bee rounded m-1" src="static/images/wing/wing_001.png" id="wing1"></a>
-                        <a href="static/images/wing/wing_002.png" target="_blank"><img alt="Wing 002" class="img-bee rounded m-1" src="static/images/wing/wing_002.png" id="wing2"></a>
-                        <a href="static/images/wing/wing_003.png" target="_blank"><img alt="Wing 003" class="img-bee rounded m-1" src="static/images/wing/wing_003.png" id="wing3"></a>
-                        <a href="static/images/wing/wing_004.png" target="_blank"><img alt="Wing 004" class="img-bee rounded m-1" src="static/images/wing/wing_004.png" id="wing4"></a>
+                        <a href="static/images/wing/wing_001.png" id="wing1" target="_blank"><img alt="Wing 001" class="img-bee rounded m-1" src="static/images/wing/wing_001.png"></a>
+                        <a href="static/images/wing/wing_002.png" id="wing2" target="_blank"><img alt="Wing 002" class="img-bee rounded m-1" src="static/images/wing/wing_002.png"></a>
+                        <a href="static/images/wing/wing_003.png" id="wing3" target="_blank"><img alt="Wing 003" class="img-bee rounded m-1" src="static/images/wing/wing_003.png"></a>
+                        <a href="static/images/wing/wing_004.png" id="wing4" target="_blank"><img alt="Wing 004" class="img-bee rounded m-1" src="static/images/wing/wing_004.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -183,8 +183,8 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/knees/knees.png" target="_blank"><img alt="Knees" class="img-bee rounded m-1" src="static/images/knees/knees.png" id="knees1"></a>
-                        <a href="static/images/knees/knees_008.png" target="_blank"><img alt="Knees 008" class="img-bee rounded m-1" src="static/images/knees/knees_008.png" id="knees8"></a>
+                        <a href="static/images/knees/knees.png" id="knees1" target="_blank"><img alt="Knees" class="img-bee rounded m-1" src="static/images/knees/knees.png"></a>
+                        <a href="static/images/knees/knees_008.png" id="knees8" target="_blank"><img alt="Knees 008" class="img-bee rounded m-1" src="static/images/knees/knees_008.png"></a>
                     </p>
                 </details>
                 <details class="m-1 p-1" open>
@@ -197,13 +197,13 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/stinger/stinger_001.png" target="_blank"><img alt="Stinger 001" class="img-bee rounded m-1" src="static/images/stinger/stinger_001.png" id="stinger1"></a>
-                        <a href="static/images/stinger/stinger_002.png" target="_blank"><img alt="Stinger 002" class="img-bee rounded m-1" src="static/images/stinger/stinger_002.png" id="stinger2"></a>
-                        <a href="static/images/stinger/stinger_003.png" target="_blank"><img alt="Stinger 003" class="img-bee rounded m-1" src="static/images/stinger/stinger_003.png" id="stinger3"></a>
-                        <a href="static/images/stinger/stinger_004.png" target="_blank"><img alt="Stinger 004" class="img-bee rounded m-1" src="static/images/stinger/stinger_004.png" id="stinger4"></a>
-                        <a href="static/images/stinger/stinger_005.png" target="_blank"><img alt="Stinger 005" class="img-bee rounded m-1" src="static/images/stinger/stinger_005.png" id="stinger5"></a>
-                        <a href="static/images/stinger/stinger_006.png" target="_blank"><img alt="Stinger 006" class="img-bee rounded m-1" src="static/images/stinger/stinger_006.png" id="stinger6"></a>
-                        <a href="static/images/stinger/stinger_007.png" target="_blank"><img alt="Stinger 007" class="img-bee rounded m-1" src="static/images/stinger/stinger_007.png" id="stinger7"></a>
+                        <a href="static/images/stinger/stinger_001.png" id="stinger1" target="_blank"><img alt="Stinger 001" class="img-bee rounded m-1" src="static/images/stinger/stinger_001.png"></a>
+                        <a href="static/images/stinger/stinger_002.png" id="stinger2" target="_blank"><img alt="Stinger 002" class="img-bee rounded m-1" src="static/images/stinger/stinger_002.png"></a>
+                        <a href="static/images/stinger/stinger_003.png" id="stinger3" target="_blank"><img alt="Stinger 003" class="img-bee rounded m-1" src="static/images/stinger/stinger_003.png"></a>
+                        <a href="static/images/stinger/stinger_004.png" id="stinger4" target="_blank"><img alt="Stinger 004" class="img-bee rounded m-1" src="static/images/stinger/stinger_004.png"></a>
+                        <a href="static/images/stinger/stinger_005.png" id="stinger5" target="_blank"><img alt="Stinger 005" class="img-bee rounded m-1" src="static/images/stinger/stinger_005.png"></a>
+                        <a href="static/images/stinger/stinger_006.png" id="stinger6" target="_blank"><img alt="Stinger 006" class="img-bee rounded m-1" src="static/images/stinger/stinger_006.png"></a>
+                        <a href="static/images/stinger/stinger_007.png" id="stinger7" target="_blank"><img alt="Stinger 007" class="img-bee rounded m-1" src="static/images/stinger/stinger_007.png"></a>
                     </p>
                 </details>
             </div>
