--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             a:active, a:hover { color: #4682B4; text-decoration: underline; }
             a:visited { color: #4682B4; text-decoration: none; }
             .img-bee { max-height: 25rem; }
-            #portrait { max-width: 50%; }
+            #portrait-img { max-width: 50%; }
             .logo { height: 2.5rem; }
             .logo:hover { filter: opacity(50%); }
             .anchor-link {
@@ -88,7 +88,7 @@
             </nav>
             <div id="pictures" data-bs-spy="scroll" data-bs-target="#simple-list-example" data-bs-offset="0" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
                 <p class="text-center">
-                    <a href="static/images/portrait/portrait.png" id="portrait" target="_blank"><img alt="Portrait" class="rounded border border-3 border-dark" src="static/images/portrait/portrait_annotated.png"></a>
+                    <a href="static/images/portrait/portrait.png" id="portrait" target="_blank"><img alt="Portrait" class="rounded border border-3 border-dark" id="portrait-img" src="static/images/portrait/portrait_annotated.png"></a>
                 </p>
                 <p class="lead text-center fst-italic p-1">
                     Beatrice was a female carpenter bee, that was caught in North Philadelphia in May 2025.
