--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             a:link, header a:hover, header a:active { color: #0096FF; text-decoration: none; }
             a:active, a:hover { color: #4682B4; text-decoration: underline; }
             a:visited { color: #4682B4; text-decoration: none; }
-            .img-bee { max-height: 25rem; }
-            #portrait-img { max-width: 50%; }
+            .img-bee, #portrait-img { max-height: 25rem; }
             .logo { height: 2.5rem; }
             .logo:hover { filter: opacity(50%); }
             .anchor-link {
