--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="bee, carpenter bee, Quanta 600 FEG Environmental Scanning Electron Microscope, quanta, esem, sem, scanning microscope, electron microscope, scanning electron microscope, singh, upenn, penn">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta property="og:type" content="website">
-        <meta property="og:site_name" content="Beatrice the (Carpenter) Bee">
+        <meta property="og:site_name" content="Beatrice the Bee">
         <meta property="og:title" content="Beatrice the (Carpenter) Bee @ Quanta 600 FEG Environmental Scanning Electron Microscope">
         <meta property="og:description" content="Microscope images of a carpenter bee from the Quanta 600 FEG Environmental Scanning Electron Microscope at the Nanoscale Characterization Facility at the Krishna P. Singh Center for Nanotechnology at the University of Pennsylvania.">
         <meta property="og:url" content="https://www.seas.upenn.edu/~ericoc/bee/">
@@ -23,7 +23,8 @@
             a:link, header a:hover, header a:active { color: #0096FF; text-decoration: none; }
             a:active, a:hover { color: #4682B4; text-decoration: underline; }
             a:visited { color: #4682B4; text-decoration: none; }
-            .img-bee, #portrait-img { max-height: 25rem; }
+            .img-bee { max-width: 90%; }
+            #portrait-img { max-width: 35%; }
             .logo { height: 2.5rem; }
             .logo:hover { filter: opacity(50%); }
             .anchor-link {
@@ -44,7 +45,7 @@
             .anchor-link:focus, .anchor-link:hover, :hover>.anchor-link, :target>.anchor-link {
                 color: #0d6efd;
                 text-decoration: none;
-                opacity: 1
+                opacity: 1;
             }
             summary:hover { filter: opacity(50%); }
         </style>
@@ -60,7 +61,7 @@
             </span>
         </header>
         <main>
-            <nav class="m-3 p-1 simple-list-example-scrollspy" id="nav">
+            <nav class="m-1 p-1 simple-list-example-scrollspy" id="nav">
                 <ul class="nav nav-tabs border-dark border-3" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link" href="#head">Head</a>
