--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             a:link, header a:hover, header a:active { color: #0096FF; text-decoration: none; }
             a:active, a:hover { color: #4682B4; text-decoration: underline; }
             a:visited { color: #4682B4; text-decoration: none; }
-            .img-bee { max-width: 90%; }
-            #portrait-img { max-width: 65%; }
+            .img-bee { width: 25%; }
+            #portrait-img { width: 50%; }
             .logo { height: 2.5rem; }
             .logo:hover { filter: opacity(50%); }
             .anchor-link {
@@ -68,7 +68,7 @@
         </header>
         <main>
             <nav class="m-1 p-1 simple-list-example-scrollspy" id="nav">
-                <ul class="nav nav-tabs border-dark border-3" role="tablist">
+                <ul class="nav nav-tabs border-dark border-top border-bottom border-3" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link" href="#head">Head</a>
                     </li>
@@ -109,11 +109,11 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/head/head_001.png" id="head1" target="_blank"><img alt="Head 001" class="img-bee rounded m-1" src="static/images/head/head_001.png"></a>
-                        <a href="static/images/head/head_003.png" id="head3" target="_blank"><img alt="Head 003" class="img-bee rounded m-1" src="static/images/head/head_003.png"></a>
-                        <a href="static/images/head/head_004.png" id="head4" target="_blank"><img alt="Head 004" class="img-bee rounded m-1" src="static/images/head/head_004.png"></a>
-                        <a href="static/images/head/head_005.png" id="head5" target="_blank"><img alt="Head 005" class="img-bee rounded m-1" src="static/images/head/head_005.png"></a>
-                        <a href="static/images/head/head_002_4K.png" id="head2" target="_blank"><img alt="Head 002 (4K)" class="img-bee rounded m-1" src="static/images/head/head_002_4K.png"></a>
+                        <a href="static/images/head/head_001.png" id="head1" target="_blank"><img alt="Head 001" class="img-bee m-1" src="static/images/head/head_001.png"></a>
+                        <a href="static/images/head/head_003.png" id="head3" target="_blank"><img alt="Head 003" class="img-bee m-1" src="static/images/head/head_003.png"></a>
+                        <a href="static/images/head/head_004.png" id="head4" target="_blank"><img alt="Head 004" class="img-bee m-1" src="static/images/head/head_004.png"></a>
+                        <a href="static/images/head/head_005.png" id="head5" target="_blank"><img alt="Head 005" class="img-bee m-1" src="static/images/head/head_005.png"></a>
+                        <a href="static/images/head/head_002_4K.png" id="head2" target="_blank"><img alt="Head 002 (4K)" class="img-bee m-1" src="static/images/head/head_002_4K.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -126,10 +126,10 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/forehead/forehead_001.png" id="forehead1" target="_blank"><img alt="Forehead 001" class="img-bee rounded m-1" src="static/images/forehead/forehead_001.png"></a>
-                        <a href="static/images/forehead/forehead_002.png" id="forehead2" target="_blank"><img alt="Forehead 002" class="img-bee rounded m-1" src="static/images/forehead/forehead_002.png"></a>
-                        <a href="static/images/forehead/forehead_003.png" id="forehead3" target="_blank"><img alt="Forehead 003" class="img-bee rounded m-1" src="static/images/forehead/forehead_003.png"></a>
-                        <a href="static/images/forehead/forehead_004.png" id="forehead4" target="_blank"><img alt="Forehead 004" class="img-bee rounded m-1" src="static/images/forehead/forehead_004.png"></a>
+                        <a href="static/images/forehead/forehead_001.png" id="forehead1" target="_blank"><img alt="Forehead 001" class="img-bee m-1" src="static/images/forehead/forehead_001.png"></a>
+                        <a href="static/images/forehead/forehead_002.png" id="forehead2" target="_blank"><img alt="Forehead 002" class="img-bee m-1" src="static/images/forehead/forehead_002.png"></a>
+                        <a href="static/images/forehead/forehead_003.png" id="forehead3" target="_blank"><img alt="Forehead 003" class="img-bee m-1" src="static/images/forehead/forehead_003.png"></a>
+                        <a href="static/images/forehead/forehead_004.png" id="forehead4" target="_blank"><img alt="Forehead 004" class="img-bee m-1" src="static/images/forehead/forehead_004.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -142,9 +142,9 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/antenna/antenna_001.png" id="antenna1" target="_blank"><img alt="Antenna 001" class="img-bee rounded m-1" src="static/images/antenna/antenna_001.png"></a>
-                        <a href="static/images/antenna/antenna_002.png" id="antenna2" target="_blank"><img alt="Antenna 002" class="img-bee rounded m-1" src="static/images/antenna/antenna_002.png"></a>
-                        <a href="static/images/antenna/antenna_003.png" id="antenna3" target="_blank"><img alt="Antenna 003" class="img-bee rounded m-1" src="static/images/antenna/antenna_003.png"></a>
+                        <a href="static/images/antenna/antenna_001.png" id="antenna1" target="_blank"><img alt="Antenna 001" class="img-bee m-1" src="static/images/antenna/antenna_001.png"></a>
+                        <a href="static/images/antenna/antenna_002.png" id="antenna2" target="_blank"><img alt="Antenna 002" class="img-bee m-1" src="static/images/antenna/antenna_002.png"></a>
+                        <a href="static/images/antenna/antenna_003.png" id="antenna3" target="_blank"><img alt="Antenna 003" class="img-bee m-1" src="static/images/antenna/antenna_003.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -157,10 +157,10 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/eye/eye_001.png" id="eye1" target="_blank"><img alt="Eye 001" class="img-bee rounded m-1" src="static/images/eye/eye_001.png"></a>
-                        <a href="static/images/eye/eye_002.png" id="eye2" target="_blank"><img alt="Eye 002" class="img-bee rounded m-1" src="static/images/eye/eye_002.png"></a>
-                        <a href="static/images/eye/eye_003.png" id="eye3" target="_blank"><img alt="Eye 003" class="img-bee rounded m-1" src="static/images/eye/eye_003.png"></a>
-                        <a href="static/images/eye/eye_004.png" id="eye4" target="_blank"><img alt="Eye 004" class="img-bee rounded m-1" src="static/images/eye/eye_004.png"></a>
+                        <a href="static/images/eye/eye_001.png" id="eye1" target="_blank"><img alt="Eye 001" class="img-bee m-1" src="static/images/eye/eye_001.png"></a>
+                        <a href="static/images/eye/eye_002.png" id="eye2" target="_blank"><img alt="Eye 002" class="img-bee m-1" src="static/images/eye/eye_002.png"></a>
+                        <a href="static/images/eye/eye_003.png" id="eye3" target="_blank"><img alt="Eye 003" class="img-bee m-1" src="static/images/eye/eye_003.png"></a>
+                        <a href="static/images/eye/eye_004.png" id="eye4" target="_blank"><img alt="Eye 004" class="img-bee m-1" src="static/images/eye/eye_004.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -173,10 +173,10 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/wing/wing_001.png" id="wing1" target="_blank"><img alt="Wing 001" class="img-bee rounded m-1" src="static/images/wing/wing_001.png"></a>
-                        <a href="static/images/wing/wing_002.png" id="wing2" target="_blank"><img alt="Wing 002" class="img-bee rounded m-1" src="static/images/wing/wing_002.png"></a>
-                        <a href="static/images/wing/wing_003.png" id="wing3" target="_blank"><img alt="Wing 003" class="img-bee rounded m-1" src="static/images/wing/wing_003.png"></a>
-                        <a href="static/images/wing/wing_004.png" id="wing4" target="_blank"><img alt="Wing 004" class="img-bee rounded m-1" src="static/images/wing/wing_004.png"></a>
+                        <a href="static/images/wing/wing_001.png" id="wing1" target="_blank"><img alt="Wing 001" class="img-bee m-1" src="static/images/wing/wing_001.png"></a>
+                        <a href="static/images/wing/wing_002.png" id="wing2" target="_blank"><img alt="Wing 002" class="img-bee m-1" src="static/images/wing/wing_002.png"></a>
+                        <a href="static/images/wing/wing_003.png" id="wing3" target="_blank"><img alt="Wing 003" class="img-bee m-1" src="static/images/wing/wing_003.png"></a>
+                        <a href="static/images/wing/wing_004.png" id="wing4" target="_blank"><img alt="Wing 004" class="img-bee m-1" src="static/images/wing/wing_004.png"></a>
                     </p>
                 </details>
                 <details class="border-bottom border-3 border-dark m-1 p-1" open>
@@ -189,8 +189,8 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/knees/knees.png" id="knees1" target="_blank"><img alt="Knees" class="img-bee rounded m-1" src="static/images/knees/knees.png"></a>
-                        <a href="static/images/knees/knees_008.png" id="knees8" target="_blank"><img alt="Knees 008" class="img-bee rounded m-1" src="static/images/knees/knees_008.png"></a>
+                        <a href="static/images/knees/knees.png" id="knees1" target="_blank"><img alt="Knees" class="img-bee m-1" src="static/images/knees/knees.png"></a>
+                        <a href="static/images/knees/knees_008.png" id="knees8" target="_blank"><img alt="Knees 008" class="img-bee m-1" src="static/images/knees/knees_008.png"></a>
                     </p>
                 </details>
                 <details class="m-1 p-1" open>
@@ -203,13 +203,13 @@
                         </span>
                     </summary>
                     <p class="text-center">
-                        <a href="static/images/stinger/stinger_001.png" id="stinger1" target="_blank"><img alt="Stinger 001" class="img-bee rounded m-1" src="static/images/stinger/stinger_001.png"></a>
-                        <a href="static/images/stinger/stinger_002.png" id="stinger2" target="_blank"><img alt="Stinger 002" class="img-bee rounded m-1" src="static/images/stinger/stinger_002.png"></a>
-                        <a href="static/images/stinger/stinger_003.png" id="stinger3" target="_blank"><img alt="Stinger 003" class="img-bee rounded m-1" src="static/images/stinger/stinger_003.png"></a>
-                        <a href="static/images/stinger/stinger_004.png" id="stinger4" target="_blank"><img alt="Stinger 004" class="img-bee rounded m-1" src="static/images/stinger/stinger_004.png"></a>
-                        <a href="static/images/stinger/stinger_005.png" id="stinger5" target="_blank"><img alt="Stinger 005" class="img-bee rounded m-1" src="static/images/stinger/stinger_005.png"></a>
-                        <a href="static/images/stinger/stinger_006.png" id="stinger6" target="_blank"><img alt="Stinger 006" class="img-bee rounded m-1" src="static/images/stinger/stinger_006.png"></a>
-                        <a href="static/images/stinger/stinger_007.png" id="stinger7" target="_blank"><img alt="Stinger 007" class="img-bee rounded m-1" src="static/images/stinger/stinger_007.png"></a>
+                        <a href="static/images/stinger/stinger_001.png" id="stinger1" target="_blank"><img alt="Stinger 001" class="img-bee m-1" src="static/images/stinger/stinger_001.png"></a>
+                        <a href="static/images/stinger/stinger_002.png" id="stinger2" target="_blank"><img alt="Stinger 002" class="img-bee m-1" src="static/images/stinger/stinger_002.png"></a>
+                        <a href="static/images/stinger/stinger_003.png" id="stinger3" target="_blank"><img alt="Stinger 003" class="img-bee m-1" src="static/images/stinger/stinger_003.png"></a>
+                        <a href="static/images/stinger/stinger_004.png" id="stinger4" target="_blank"><img alt="Stinger 004" class="img-bee m-1" src="static/images/stinger/stinger_004.png"></a>
+                        <a href="static/images/stinger/stinger_005.png" id="stinger5" target="_blank"><img alt="Stinger 005" class="img-bee m-1" src="static/images/stinger/stinger_005.png"></a>
+                        <a href="static/images/stinger/stinger_006.png" id="stinger6" target="_blank"><img alt="Stinger 006" class="img-bee m-1" src="static/images/stinger/stinger_006.png"></a>
+                        <a href="static/images/stinger/stinger_007.png" id="stinger7" target="_blank"><img alt="Stinger 007" class="img-bee m-1" src="static/images/stinger/stinger_007.png"></a>
                     </p>
                 </details>
             </div>
@@ -230,26 +230,21 @@
             </span>
         </footer>
         <script>
-            let mybutton = document.getElementById("btn-back-to-top");
-
-            // When the user scrolls down 20px from the top of the document, show the button
+            let goUpButton = document.getElementById("btn-back-to-top");
             window.onscroll = function () {
                 scrollFunction();
             };
-
             function scrollFunction() {
                 if (
                     document.body.scrollTop > 20 ||
                     document.documentElement.scrollTop > 20
                 ) {
-                    mybutton.style.display = "block";
+                    goUpButton.style.display = "block";
                 } else {
-                    mybutton.style.display = "none";
+                    goUpButton.style.display = "none";
                 }
             }
-            // When the user clicks on the button, scroll to the top of the document
-            mybutton.addEventListener("click", backToTop);
-
+            goUpButton.addEventListener("click", backToTop);
             function backToTop() {
                 document.body.scrollTop = 0;
                 document.documentElement.scrollTop = 0;
